# protein_sequence_classifier

./: .dockerignore  .gitignore  Dockerfile  ESM2_classifier.ipynb  GEMINI.md  LICENSE  Makefile  README.md  notebook.py  pyproject.toml
.github/workflows/: ci.yml
configs/: accelerate.yaml  train.yaml  train_dbg.yaml
src/: esm2_classification.py
tests/: conftest.py  test_training_loop.py
tests/data/test/: Cas1.fasta  Cas12.fasta  Cas2.fasta
tests/data/train/: Cas1.fasta  Cas12.fasta  Cas2.fasta
tests/data/validation/: Cas1.fasta  Cas12.fasta  Cas2.fasta
tests/fixtures/: experiment_results.json  train_data_reference.json
