[project]
name = "protein-sequence-classifier"
version = "0.1.0"
description = "Protein sequence classifier using ESM2 and LoRA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "biopython",
    "datasets",
    "marimo[mcp]>=0.18.4",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "peft",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "torch",
    "tqdm>=4.67.1",
    "transformers",
    "wandb>=0.23.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
